@@ -87,3 +87,5 @@
 - Tested DVDState function inside a new-svn build (works)
 - Create shell-linux/state.sh to detect bluray and dvd-media  
 - Show roland svn 
+- Testet state.sh and made some minor changes ...
+
